src/test/deca/syntax/valid/while_pars_01.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//    0
//
// Historique:
//    cree le 04/01/2023

{

        int a = 3;
        while (a>=0) {
            a = a - 1;
        }
        println(a);

}